--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="prueba/UTMACH2.png" width="260" height="80" class="d-inline-block align-top" alt="">
+                <img src="UTMACH2.png" width="260" height="80" class="d-inline-block align-top" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -55,13 +55,13 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="prueba/duo dinamico.png" class="d-block w-100" alt="...">
+                            <img src="duo dinamico.png" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="prueba/duo dinamico1.png" class="d-block w-100" alt="...">
+                            <img src="duo dinamico1.png" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="prueba/fornais.png" class="d-block w-100" alt="...">
+                            <img src="fornais.png" class="d-block w-100" alt="...">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -85,7 +85,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-4 col-lg-4">
                 <div class="componentes">
-                    <img src="prueba/PANEL DE COMPONENTES.png">
+                    <img src="PANEL DE COMPONENTES.png">
                     <div style="text-align: justify" width="320">
                         <p>Procesador » AMD Athlon 3000G with Radeon Vega Graphics 3.50 GHz
                             <br>Motherboard » GIGABYTE A320M-S2H V2
@@ -98,7 +98,7 @@
             </div>
             <div class="col-sm-12 col-md-4 col-lg-4">
                 <div class="discord">
-                    <img src="prueba/PANEL DISCORD.png">
+                    <img src="PANEL DISCORD.png">
                     <div style="text-align: justify" width="320">
                         <p>¡Únete al servidor de Discord, podrás divertirte jugando y conociendo a otras personas!
                         </p>
@@ -107,7 +107,7 @@
             </div>
             <div class="col-sm-12 col-md-4 col-lg-4">
                 <div class="youtube">
-                    <img src="prueba/PANEL YOUTUBE.png">
+                    <img src="PANEL YOUTUBE.png">
                     <div style="text-align: justify" width="320">
                         <p>También puedes seguirme en YouTube, la mayoría de contenido será exclusivo de ahí y no se verán en los directos
                         </p>
@@ -119,7 +119,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12">
                 <div class="banner">
-                    <img src="prueba/BANNER DE TWITCH.png">
+                    <img src="BANNER DE TWITCH.png">
                 </div>
             </div>
         </div>
